--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "stylelint.config.js",
+  "dependencies": {
+    "stylelint": "^13.11.0",
+    "stylelint-config-recommended": "^3.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,9 +25,5 @@
   "bugs": {
     "url": "https://github.com/JasemDuncan/Library-App/issues"
   },
-  "homepage": "https://github.com/JasemDuncan/Library-App#readme",
-  "devDependencies": {
-    "eslint": "^7.20.0",
-    "eslint-plugin-react": "^7.22.0"
-  }
+  "homepage": "https://github.com/JasemDuncan/Library-App#readme"
 }
